[package]
edition = { workspace = true }
name = "ffi"
publish = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "core"

[dependencies]
crypto = { path = "../crypto" }
teltra = { path = "../teltra" }
thiserror = { workspace = true }
uniffi = { workspace = true }
wca = { path = "../wca", default-features = false }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
