[package]
edition = { workspace = true }
name = "wca"
publish = { workspace = true }
version = { workspace = true }

[features]
default = ["pcsc"]
pcsc = ["dep:pcsc"]

[dependencies]
apdu = { path = "../apdu" }
bdk = { workspace = true }
bitcoin = { workspace = true, features = ["base64"] }
bytes = "1"
hex = "0.4"
miniscript = { workspace = true }
next-gen = "0.1.1"
pcsc = { workspace = true, optional = true }
prost = { workspace = true }
rand_core = "0.6.4"
regex = "1.10.3"
ring = "0.17.7"
sha2 = { workspace = true }
teltra = { path = "../teltra" }
thiserror = { workspace = true }
x509-parser = { version = "0.15.1", features = ["verify"] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
