[package]
name = "bdk-android-ffi"
version = "0.32.1"
authors = ["Steve Myers <steve@notmandatory.org>", "Sudarsan Balaji <sudarsan.balaji@artfuldev.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
rust-version = "1.77.1"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "bdkffi"

[dependencies]
bdk = { version = "0.30.2", features = ["all-keys", "use-esplora-ureq", "sqlite-bundled", "rpc"] }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
assert_matches = "1.5.0"
