[package]
authors = [
  "Steve Myers <steve@notmandatory.org>",
  "Sudarsan Balaji <sudarsan.balaji@artfuldev.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "bdk-android-ffi"
rust-version = "1.77.1"
version = "0.32.1"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "bdkffi"

[dependencies]
bdk = { version = "0.30.2", features = [
  "all-keys",
  "rpc",
  "sqlite-bundled",
  "use-esplora-ureq",
] }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
assert_matches = "1.5.0"
