[package]
edition.workspace = true
name = "chaincode-delegation"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { workspace = true }
crypto = { workspace = true }
miniscript = { workspace = true }
