[package]
edition = { workspace = true }
name = "core-ffi"
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "core"

[dependencies]
bitcoin = { workspace = true, features = ["base64"] }
chaincode-delegation = { path = "../chaincode-delegation" }
crypto = { workspace = true, features = [
  "chaincode_delegation",
  "noise",
  "p256_box",
  "spake2",
] }
frost = { path = "../frost" }
lightning-support = { path = "../lightning-support" }
miniscript = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
wsm-integrity = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
