[package]
edition.workspace = true
name = "frost"
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
crypto = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
