[package]
edition.workspace = true
name = "frost"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bitcoin = { workspace = true }
crypto = { workspace = true }
miniscript = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
