[package]
edition.workspace = true
name = "lightning-support"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { workspace = true }
crypto = { workspace = true }
lightning-invoice = { version = "=0.33.2", features = ["std"] }
thiserror = { workspace = true }
