[package]
edition = { workspace = true }
name = "wca"
publish = { workspace = true }
version = { workspace = true }

[features]
default = ["pcsc"]
mock-time = []
pcsc = ["dep:pcsc"]

[dependencies]
apdu = { path = "../apdu" }
bitcoin = { workspace = true, features = ["base64"] }
bytes = "1"
hex = "0.4"
miniscript = { workspace = true }
next-gen = "0.1.1"
once_cell = "1.19.0"
pcsc = { workspace = true, optional = true }
prost = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.10.3"
ring = "0.17.7"
serial_test = "3.1.1"
teltra = { path = "../teltra" }
thiserror = { workspace = true }
x509-parser = { version = "0.15.1", features = ["verify"] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
